// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstallModalContent modal component should be rendered correctly 1`] = `
<ModalContent
  className="sto-modal-content"
>
  <AnimatedContentHeader
    activeClassName="sto-animated-header--active"
    className="sto-animated-header"
  >
    <Icon
      className="sto-animated-header-icon blurry"
      color="#95999D"
      height="64"
      icon="test-file-stub"
      spin={false}
      width="48"
    />
    <Icon
      className="sto-animated-header-exchange"
      color="#95999D"
      icon="exchange"
      spin={false}
    />
    <Icon
      className="sto-animated-header-icon"
      height="56"
      icon="test-file-stub"
      spin={false}
      width="56"
    />
  </AnimatedContentHeader>
  <SubTitle
    className="sto-modal-title"
    ellipsis={false}
    tag="div"
  >
    Data access requirements
  </SubTitle>
  <withRouter(Wrapper)
    app={
      Object {
        "editor": "Cozy",
        "manifest": Object {
          "categories": Array [
            "cozy",
          ],
          "developer": Object {
            "name": "Cozy",
            "url": "https://cozy.io",
          },
          "editor": "Cozy",
          "icon": "https://mockcozy.cc/registry/photos/3.0.0/icon.svg",
          "langs": Array [
            "en",
            "fr",
          ],
          "licence": "AGPL-3.0",
          "locales": Object {
            "en": Object {
              "changes": "### NEW!!!

 Now on the cozy-store :tada",
              "long_description": "### Features

Enjoy features to grab your data in you Cozy :tada:",
              "short_description": "Gestionnaire de photos pour Cozy v3",
            },
            "fr": Object {
              "long_description": "### Photos

Gestionnaire de photos pour Cozy v3 :tada:",
              "short_description": "Gestionnaire de photos pour Cozy v3",
            },
          },
          "name": "Photos",
          "name_prefix": "Cozy",
          "permissions": Object {
            "albums": Object {
              "description": "Required to manage photos albums",
              "methods": Array [
                "GET",
                "POST",
                "PUT",
              ],
              "type": "io.cozy.photos.albums",
            },
            "apps": Object {
              "description": "Required by the cozy-bar to display the icons of the apps",
              "type": "io.cozy.apps",
              "verbs": Array [
                "GET",
              ],
            },
            "contacts": Object {
              "description": "Required to to share photos with your contacts",
              "methods": Array [
                "GET",
                "POST",
              ],
              "type": "io.cozy.contacts",
            },
            "files": Object {
              "description": "Required for photo access",
              "methods": Array [
                "GET",
                "POST",
                "PUT",
              ],
              "type": "io.cozy.files",
            },
            "settings": Object {
              "description": "Required by the cozy-bar to display Claudy and know which applications are coming soon",
              "type": "io.cozy.settings",
              "verbs": Array [
                "GET",
              ],
            },
          },
          "platforms": Array [
            Object {
              "type": "ios",
              "url": "",
            },
            Object {
              "type": "linux",
              "url": "",
            },
            Object {
              "type": "android",
              "url": "https://mock.app",
            },
          ],
          "routes": Object {
            "/": Object {
              "folder": "/",
              "index": "index.html",
              "public": false,
            },
            "/public": Object {
              "folder": "/public",
              "index": "index.html",
              "public": true,
            },
          },
          "short_description": "Photos manager for Cozy v3",
          "slug": "photos",
          "source": "registry://photos/stable",
          "type": "webapp",
          "version": "3.0.0",
        },
        "slug": "photos",
        "type": "webapp",
        "version": "3.0.0",
      }
    }
  />
</ModalContent>
`;

exports[`InstallModalContent modal component should display error if fetchError 1`] = `
<ModalContent
  className="sto-modal-content"
>
  <AnimatedContentHeader
    activeClassName="sto-animated-header--active"
    className="sto-animated-header"
  >
    <Icon
      className="sto-animated-header-icon blurry"
      color="#95999D"
      height="64"
      icon="test-file-stub"
      spin={false}
      width="48"
    />
    <Icon
      className="sto-animated-header-exchange"
      color="#95999D"
      icon="exchange"
      spin={false}
    />
    <Icon
      className="sto-animated-header-icon"
      height="56"
      icon="test-file-stub"
      spin={false}
      width="56"
    />
  </AnimatedContentHeader>
  <SubTitle
    className="sto-modal-title"
    ellipsis={false}
    tag="div"
  >
    Data access requirements
  </SubTitle>
  <withRouter(Wrapper)
    app={
      Object {
        "editor": "Cozy",
        "manifest": Object {
          "categories": Array [
            "cozy",
          ],
          "developer": Object {
            "name": "Cozy",
            "url": "https://cozy.io",
          },
          "editor": "Cozy",
          "icon": "https://mockcozy.cc/registry/photos/3.0.0/icon.svg",
          "langs": Array [
            "en",
            "fr",
          ],
          "licence": "AGPL-3.0",
          "locales": Object {
            "en": Object {
              "changes": "### NEW!!!

 Now on the cozy-store :tada",
              "long_description": "### Features

Enjoy features to grab your data in you Cozy :tada:",
              "short_description": "Gestionnaire de photos pour Cozy v3",
            },
            "fr": Object {
              "long_description": "### Photos

Gestionnaire de photos pour Cozy v3 :tada:",
              "short_description": "Gestionnaire de photos pour Cozy v3",
            },
          },
          "name": "Photos",
          "name_prefix": "Cozy",
          "permissions": Object {
            "albums": Object {
              "description": "Required to manage photos albums",
              "methods": Array [
                "GET",
                "POST",
                "PUT",
              ],
              "type": "io.cozy.photos.albums",
            },
            "apps": Object {
              "description": "Required by the cozy-bar to display the icons of the apps",
              "type": "io.cozy.apps",
              "verbs": Array [
                "GET",
              ],
            },
            "contacts": Object {
              "description": "Required to to share photos with your contacts",
              "methods": Array [
                "GET",
                "POST",
              ],
              "type": "io.cozy.contacts",
            },
            "files": Object {
              "description": "Required for photo access",
              "methods": Array [
                "GET",
                "POST",
                "PUT",
              ],
              "type": "io.cozy.files",
            },
            "settings": Object {
              "description": "Required by the cozy-bar to display Claudy and know which applications are coming soon",
              "type": "io.cozy.settings",
              "verbs": Array [
                "GET",
              ],
            },
          },
          "platforms": Array [
            Object {
              "type": "ios",
              "url": "",
            },
            Object {
              "type": "linux",
              "url": "",
            },
            Object {
              "type": "android",
              "url": "https://mock.app",
            },
          ],
          "routes": Object {
            "/": Object {
              "folder": "/",
              "index": "index.html",
              "public": false,
            },
            "/public": Object {
              "folder": "/public",
              "index": "index.html",
              "public": true,
            },
          },
          "short_description": "Photos manager for Cozy v3",
          "slug": "photos",
          "source": "registry://photos/stable",
          "type": "webapp",
          "version": "3.0.0",
        },
        "slug": "photos",
        "type": "webapp",
        "version": "3.0.0",
      }
    }
  />
  <p
    className="u-error"
  >
    Something went wrong when fetching the application informations. Reason: Fetch mock error
  </p>
</ModalContent>
`;

exports[`InstallModalContent modal component should have install button busy if isInstalling 1`] = `
<ModalContent
  className="sto-modal-content"
>
  <AnimatedContentHeader
    activeClassName="sto-animated-header--active"
    className="sto-animated-header"
  >
    <Icon
      className="sto-animated-header-icon blurry"
      color="#95999D"
      height="64"
      icon="test-file-stub"
      spin={false}
      width="48"
    />
    <Icon
      className="sto-animated-header-exchange"
      color="#95999D"
      icon="exchange"
      spin={false}
    />
    <Icon
      className="sto-animated-header-icon"
      height="56"
      icon="test-file-stub"
      spin={false}
      width="56"
    />
  </AnimatedContentHeader>
  <SubTitle
    className="sto-modal-title"
    ellipsis={false}
    tag="div"
  >
    Data access requirements
  </SubTitle>
  <withRouter(Wrapper)
    app={
      Object {
        "editor": "Cozy",
        "manifest": Object {
          "categories": Array [
            "cozy",
          ],
          "developer": Object {
            "name": "Cozy",
            "url": "https://cozy.io",
          },
          "editor": "Cozy",
          "icon": "https://mockcozy.cc/registry/photos/3.0.0/icon.svg",
          "langs": Array [
            "en",
            "fr",
          ],
          "licence": "AGPL-3.0",
          "locales": Object {
            "en": Object {
              "changes": "### NEW!!!

 Now on the cozy-store :tada",
              "long_description": "### Features

Enjoy features to grab your data in you Cozy :tada:",
              "short_description": "Gestionnaire de photos pour Cozy v3",
            },
            "fr": Object {
              "long_description": "### Photos

Gestionnaire de photos pour Cozy v3 :tada:",
              "short_description": "Gestionnaire de photos pour Cozy v3",
            },
          },
          "name": "Photos",
          "name_prefix": "Cozy",
          "permissions": Object {
            "albums": Object {
              "description": "Required to manage photos albums",
              "methods": Array [
                "GET",
                "POST",
                "PUT",
              ],
              "type": "io.cozy.photos.albums",
            },
            "apps": Object {
              "description": "Required by the cozy-bar to display the icons of the apps",
              "type": "io.cozy.apps",
              "verbs": Array [
                "GET",
              ],
            },
            "contacts": Object {
              "description": "Required to to share photos with your contacts",
              "methods": Array [
                "GET",
                "POST",
              ],
              "type": "io.cozy.contacts",
            },
            "files": Object {
              "description": "Required for photo access",
              "methods": Array [
                "GET",
                "POST",
                "PUT",
              ],
              "type": "io.cozy.files",
            },
            "settings": Object {
              "description": "Required by the cozy-bar to display Claudy and know which applications are coming soon",
              "type": "io.cozy.settings",
              "verbs": Array [
                "GET",
              ],
            },
          },
          "platforms": Array [
            Object {
              "type": "ios",
              "url": "",
            },
            Object {
              "type": "linux",
              "url": "",
            },
            Object {
              "type": "android",
              "url": "https://mock.app",
            },
          ],
          "routes": Object {
            "/": Object {
              "folder": "/",
              "index": "index.html",
              "public": false,
            },
            "/public": Object {
              "folder": "/public",
              "index": "index.html",
              "public": true,
            },
          },
          "short_description": "Photos manager for Cozy v3",
          "slug": "photos",
          "source": "registry://photos/stable",
          "type": "webapp",
          "version": "3.0.0",
        },
        "slug": "photos",
        "type": "webapp",
        "version": "3.0.0",
      }
    }
  />
</ModalContent>
`;

exports[`InstallModalContent modal component should not display spinner if isFetching but during a cancel (isCanceling) 1`] = `
<ModalContent
  className="sto-modal-content"
>
  <AnimatedContentHeader
    activeClassName="sto-animated-header--active"
    className="sto-animated-header"
  >
    <Icon
      className="sto-animated-header-icon blurry"
      color="#95999D"
      height="64"
      icon="test-file-stub"
      spin={false}
      width="48"
    />
    <Icon
      className="sto-animated-header-exchange"
      color="#95999D"
      icon="exchange"
      spin={false}
    />
    <Icon
      className="sto-animated-header-icon"
      height="56"
      icon="test-file-stub"
      spin={false}
      width="56"
    />
  </AnimatedContentHeader>
  <SubTitle
    className="sto-modal-title"
    ellipsis={false}
    tag="div"
  >
    Data access requirements
  </SubTitle>
  <withRouter(Wrapper)
    app={
      Object {
        "editor": "Cozy",
        "manifest": Object {
          "categories": Array [
            "cozy",
          ],
          "developer": Object {
            "name": "Cozy",
            "url": "https://cozy.io",
          },
          "editor": "Cozy",
          "icon": "https://mockcozy.cc/registry/photos/3.0.0/icon.svg",
          "langs": Array [
            "en",
            "fr",
          ],
          "licence": "AGPL-3.0",
          "locales": Object {
            "en": Object {
              "changes": "### NEW!!!

 Now on the cozy-store :tada",
              "long_description": "### Features

Enjoy features to grab your data in you Cozy :tada:",
              "short_description": "Gestionnaire de photos pour Cozy v3",
            },
            "fr": Object {
              "long_description": "### Photos

Gestionnaire de photos pour Cozy v3 :tada:",
              "short_description": "Gestionnaire de photos pour Cozy v3",
            },
          },
          "name": "Photos",
          "name_prefix": "Cozy",
          "permissions": Object {
            "albums": Object {
              "description": "Required to manage photos albums",
              "methods": Array [
                "GET",
                "POST",
                "PUT",
              ],
              "type": "io.cozy.photos.albums",
            },
            "apps": Object {
              "description": "Required by the cozy-bar to display the icons of the apps",
              "type": "io.cozy.apps",
              "verbs": Array [
                "GET",
              ],
            },
            "contacts": Object {
              "description": "Required to to share photos with your contacts",
              "methods": Array [
                "GET",
                "POST",
              ],
              "type": "io.cozy.contacts",
            },
            "files": Object {
              "description": "Required for photo access",
              "methods": Array [
                "GET",
                "POST",
                "PUT",
              ],
              "type": "io.cozy.files",
            },
            "settings": Object {
              "description": "Required by the cozy-bar to display Claudy and know which applications are coming soon",
              "type": "io.cozy.settings",
              "verbs": Array [
                "GET",
              ],
            },
          },
          "platforms": Array [
            Object {
              "type": "ios",
              "url": "",
            },
            Object {
              "type": "linux",
              "url": "",
            },
            Object {
              "type": "android",
              "url": "https://mock.app",
            },
          ],
          "routes": Object {
            "/": Object {
              "folder": "/",
              "index": "index.html",
              "public": false,
            },
            "/public": Object {
              "folder": "/public",
              "index": "index.html",
              "public": true,
            },
          },
          "short_description": "Photos manager for Cozy v3",
          "slug": "photos",
          "source": "registry://photos/stable",
          "type": "webapp",
          "version": "3.0.0",
        },
        "slug": "photos",
        "type": "webapp",
        "version": "3.0.0",
      }
    }
  />
</ModalContent>
`;

exports[`InstallModalContent modal component should return a spinner if isFetching 1`] = `
<ModalContent
  className="sto-modal-content"
>
  <div
    className="sto-install-loading"
  >
    <Wrapper
      size="xlarge"
    />
  </div>
</ModalContent>
`;
